# ones-pyapi

./: README.md  mkdocs.yml  requirements.txt  setup.py
docs/: Installation.md  ONES_Intregartion_with_prometheus.md  index.md  ones_client.md
docs/Ones_API_For_Network_Telemetry/: Overview.md
examples/day1fm/: deploy_config.example.py  deploy_config.py  intent_status.py  readme.md
examples/day2fm/: Overview.md  backup_restore.py  config_diff.py  controller_fm_version.py  controller_version.py  create_tenant.py  delete_tenant.py  get_tenant_details.py  image_upgrade.py  list_tenants.py  mgmnt_status.py  readme.md  update_tenant_gpus.py  ztp_enable.py
examples/telemetry/: DevicePeripherals.py  acls_utilization.py  agent_version.py  cabling_info.py  cpu_core_temprature.py  cpu_utilization.py  device_interface.py  examples.py  fan_speed.py  faulty_fans.py  faulty_psu.py  get_asics_info.py  readme.md  (+22 more)
mkdocs/: 404.html  index.html  mkdocs.yml
mkdos/: index.md  mkdocs.yml
ones_pyapi/: pyproject.toml
ones_pyapi/examples/: examples_usage_bgp.py  examples_usage_control_plane.py  examples_usage_device.py  examples_usage_fm.py  examples_usage_health.py  examples_usage_inventory.py  examples_usage_misc.py  examples_usage_traffic.py  test_example.py
ones_pyapi/ones/: __init__.py  client.py  exceptions.py  transport.py
ones_pyapi/ones/resources/: base.py  bgp.py  control_plane.py  device.py  fm.py  health.py  inventory.py  misc.py  traffic.py  user.py
onesclient/: client.py  constants.py  endpoints.py  excpetions.py  util.py
tests/: test.py
versions/: readme.md
(+79 files in other folders)
